<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#133253"
    android:layout_gravity="end"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/box"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/ms_box" />

    <TextView
        android:id="@+id/circle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ms_circle" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="46dp"
        android:text="@string/txtUser"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignEnd="@id/box"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnSubmit" />

    <Button
        android:id="@+id/btnAnswer1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnAnswer1" />

    <Button
        android:id="@+id/btnAnswer2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnAnswer2" />

    <Button
        android:id="@+id/btnAnswer3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnAnswer3" />

    <Button
        android:id="@+id/btnAnswer4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="610dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btnAnswer4" />

    <TextView
        android:id="@+id/txtDefinition"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/txtDefinition"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

</RelativeLayout>